--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
   },
   "homepage": "https://github.com/Rulox/react-atomic-structure#readme",
   "dependencies": {
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-router": "^2.8.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "webpack-uglify-js-plugin": "^1.1.9",
@@ -38,12 +36,14 @@
     "html-webpack-plugin": "^2.24.1"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "@kadira/storybook": "^2.35.3",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.25.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -52,10 +52,14 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
     "node-sass": "^3.11.2",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
+    "stack-source-map": "^1.0.7",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-hot-middleware": "^2.21.0"
   }
 }
